# fivetwofour_assignment_1

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: fivetwofour_assignment_1.rst  modules.rst
fivetwofour_assignment_1/: fivetwofour_assignment_1.py
tests/: test_fivetwofour_assignment_1.py
