[tool.poetry]
name = "fivetwofour_assignment_1"
version = "0.1.0"
description = "Python package for DSCI 524 Assignment 1"
authors = ["Charles Suresh <emailcharlesjosh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
